force-app/main/default/objects/Vehicle__c/Vehicle__c.object-meta.xml
<CustomObject>
    <label>Vehicle</label>
    <pluralLabel>Vehicles</pluralLabel>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>자동차 차량 정보를 관리하는 오브젝트</description>
</CustomObject>