force-app/main/default/objects/Vehicle__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>고객사</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Vehicles</relationshipName>
    <relationshipLabel>차량 목록</relationshipLabel>
</CustomField>