force-app/main/default/objects/Vehicle__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>출고일</label>
    <type>Date</type>
</CustomField>