force-app/main/default/objects/Vehicle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>차량 모델</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>