force-app/main/default/objects/Vehicle__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>차량 상태</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>재고</fullName>
                <default>true</default>
                <label>재고</label>
            </value>
            <value>
                <fullName>계약</fullName>
            </value>
            <value>
                <fullName>출고완료</fullName>
            </value>
            <value>
                <fullName>A/S중</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>