force-app/main/default/objects/Vehicle__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <label>VIN 번호</label>
    <type>Text</type>
    <length>17</length>
    <unique>true</unique>
    <required>true</required>
</CustomField>